zz-out/pass14_run2/zz-scripts/chapter01/plot_fig05_I1_vs_T.err
  File "/home/jplal/MCGT/zz-scripts/chapter01/plot_fig05_I1_vs_T.py", line 50
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
